# whisper-transcriber

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  jobs.py  llm.py  main.py  storage.py  subtitles.py  transcribe.py
backend/tests/: conftest.py  test_jobs.py  test_llm.py  test_subtitles.py  test_transcribe.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Dropzone.tsx  HistoryPanel.tsx  JobResult.tsx  ProgressCard.tsx
frontend/src/lib/: api.ts  format.ts
